--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,14 @@ jobs:
       - name: Build
         env:
           CI: false
-        run: npm run build
+        run: |
+          touch .env
+          echo REACT_APP_EMAILJS_SERVICE_ID= ${{ secrets.REACT_APP_EMAILJS_SERVICE_ID }}  >> .env
+          echo REACT_APP_EMAILJS_TEMPLATE_ID= ${{ secrets.REACT_APP_EMAILJS_TEMPLATE_ID }}  >> .env 
+          echo REACT_APP_EMAILJS_USER_ID= ${{ secrets.REACT_APP_EMAILJS_USER_ID }}  >> .env
+
+          cat .env
+          npm run build
       - name: Archive Production Artifact
         uses: actions/upload-artifact@v4
         with:
