--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "avva-advisors",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://avvaadvisors.com",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "cra-template": "1.2.0",
